unpackaged/main/default/objects/Sample__c/fields/Date_Sample_Collected_from_Patient__c.field-meta.xml
<CustomField>
    <fullName>Date_Sample_Collected_from_Patient__c</fullName>
    <label>Date Sample Collected from Patient</label>
    <type>Date</type>
</CustomField>