unpackaged/main/default/objects/Sample__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>YEAR(  Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>