unpackaged/main/default/objects/Sample__c/fields/Next_Drop_off_Location__c.field-meta.xml
<CustomField>
    <fullName>Next_Drop_off_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Drop off Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>