unpackaged/main/default/objects/Sample__c/fields/Package_Number__c.field-meta.xml
<CustomField>
    <fullName>Package_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Number</label>
    <referenceTo>Sample_Package__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>