unpackaged/main/default/objects/Sample__c/fields/Sample_Drop_off_Location_Lab__c.field-meta.xml
<CustomField>
    <fullName>Sample_Drop_off_Location_Lab__c</fullName>
    <label>Sample Drop off Location (Lab)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Name</valueSetName>
    </valueSet>
</CustomField>