unpackaged/main/default/objects/Sample__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sample_Type</valueSetName>
    </valueSet>
</CustomField>