unpackaged/main/default/objects/Sample__c/fields/Specimen_County_of_origin__c.field-meta.xml
<CustomField>
    <fullName>Specimen_County_of_origin__c</fullName>
    <label>Specimen County of origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liberia_County</valueSetName>
    </valueSet>
</CustomField>