unpackaged/main/default/objects/Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_ID__c</columns>
    <columns>Specimen_County_of_origin__c</columns>
    <columns>Date_Sample_Collected_from_Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>