unpackaged/main/default/objects/Sample__c/listViews/February.listView-meta.xml
<ListView>
    <fullName>February</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>February</label>
</ListView>