unpackaged/main/default/objects/Sample__c/listViews/January.listView-meta.xml
<ListView>
    <fullName>January</fullName>
    <columns>NAME</columns>
    <columns>Patient_ID__c</columns>
    <columns>Specimen_County_of_origin__c</columns>
    <columns>Date_Sample_Collected_from_Patient__c</columns>
    <filterScope>Everything</filterScope>
    <label>January</label>
</ListView>